# turbohtml

./: .cursorrules  .gitignore  .pre-commit-config.yaml  .python-version  CHANGELOG.md  CONTRIBUTING.md  DISPATCH_DSL_DESIGN.md  DSL_IMPLEMENTATION_PLAN.md  MYPYC_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE.md  README.md  TOKENIZER_REFACTORING_PLAN.md  benchmark.py  build_mypyc.sh  compare_pure_vs_compiled.sh  debug_tokenizer.py  fuzz.py  profile_parser.py  profile_real.py  pyproject.toml  regressions.py  requirements-benchmark.txt  run_tests.py  setup.py  test-summary-rust.txt  test-summary.txt  watch_tests.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml
benchmarks/: compare_mypyc.py  performance.py  profile_local.py
docs/: api.md  bleach-migration.md  cli.md  correctness.md  errors.md  fragments.md  html-cleaning.md  html5ever_port_plan.md  index.md  linkify.md  quickstart.md  sanitization.md  text.md  transforms.md  unsafe-handling.md  url-cleaning.md
docs/playground/: app.js  index.html
docs/playground/py/: render.py
rust_tokenizer/: Cargo.toml  pyproject.toml
rust_tokenizer/src/: lib.rs
scripts/: release.py
src/justhtml/: __init__.py  __main__.py  constants.py  node.py  parser.py  sanitize.py  serialize.py  tokenizer.py  tokens.py  transforms.py  treebuilder.py  treebuilder_modes.py
src/turbohtml/: __init__.py  __main__.py  adoption.py  adoption_new.py  buffer.py  constants.py  context.py  entities.py  entity_trie.py  flags.py  foreign.py  formatting.py  foster.py  fragment.py  handlers.py  insertion.py  node.py  parser.py  plan.md  serialize.py  smallset.py  table_modes.py  tokenizer.py  tokenizer_rust.py  tokens.py  treebuilder.py  utils.py
tests/: README.md  test-summary.txt  test_cli.py  test_coverage.py  test_errors.py  test_format.py  test_node.py  test_sanitize.py  test_sanitize_integration.py  test_sanitize_transform.py  test_selector.py  test_serialize.py  test_transforms.py
tests/harness/: reporter.py
tests/justhtml-sanitize-tests/: cases.json
tests/turbohtml-tests/: empty_stack_edge_cases.dat.bak  tokenizer_edge_cases.test
