[project]
name = "turbohtml"
authors = [{ name = "Emil Stenström", email = "emil@emilstenstrom.se" }]
version = "0.0.0"
description = "Coming soon"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
benchmark = [
    "psutil",
    "zstandard",
    "html5lib",
    "lxml",
    "beautifulsoup4",
    "selectolax",
]

[project.urls]
Homepage = "https://github.com/emilstenstrom/turbohtml"
Issues = "https://github.com/emilstenstrom/turbohtml/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/turbohtml"]

[tool.ruff]
target-version = "py38" # adjust to your lowest supported Python version
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "TD",
    "D",
    "EM",
    "TRY003",
    "T201",
    "FBT",
    "E501",
    "PLR",
    "C",
    "SIM",
    "ARG",
    "ERA001",
    "SLF001",
    "S105",
]
