[project]
name = "justhtml"
authors = [{ name = "Emil Stenström", email = "emil@emilstenstrom.se" }]
version = "0.1.0"
description = "A pure Python HTML5 parser that just works."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
benchmark = [
    "psutil",
    "zstandard",
    "html5lib",
    "lxml",
    "beautifulsoup4",
    "selectolax",
    "html5-parser",
]
dev = [
    "ruff==0.14.7",
    "coverage",
    "build",
    "twine",
    "pre-commit",
]

[project.urls]
Homepage = "https://github.com/emilstenstrom/justhtml"
Issues = "https://github.com/emilstenstrom/justhtml/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/justhtml"]

[tool.ruff]
target-version = "py38" # adjust to your lowest supported Python version
line-length = 119

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN",
    "TD",
    "D",
    "EM",
    "TRY003",
    "T201",
    "FBT",
    "E501",
    "PLR",
    "C",
    "SIM",
    "ARG",
    "ERA001",
    "SLF001",
    "S105",
    "COM812",
    "ISC001",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "def __init__",
    "__slots__",
]
